# yumi

gazebo_mimic/src/gazebo_mimic_plugin/: mimic_plugin.cpp
yumi_description/urdf/: yumi.urdf.xacro
yumi_hw/: CMakeLists.txt
yumi_launch/launch/: yumi_gazebo_pos_control.launch
